bookinfo/bookinfo-productpage_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: productpage
    service: productpage
    app.kubernetes.io/instance: bookinfo
  name: productpage
spec:
  port:
    targetPort: http
    path: /productpage
  to:
    kind: Service
    name: productpage
    weight: 100
  wildcardPolicy: None
